basic layout and routing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,47 +9,11 @@
 @import "components/navigation";
 
 
-html, body, #root, .site {
+html, body, #root {
 	@include size(100%);
 }
 
-input, textarea {
+* {
 	box-sizing: border-box;
 }
-
-$grey: #ccc;
-$green: forestgreen;
-
-.site {
-	display: grid;
-	grid-template-columns: 200px 1fr;
-	grid-template-rows: 100px 1fr 100px;
-	grid-template-areas:
-		"header header"
-		"navigation content"
-		"footer footer";
-
-	&__header {
-		grid-area: header;
-		border-bottom: 1px solid $grey;
-	}
-
-	&__footer {
-		grid-area: footer;
-		border-top: 1px solid $grey;
-	}
-
-	&__navigation {
-		grid-area: navigation;
-		border-right: 1px solid $grey;
-		overflow-y: auto;
-	}
-
-	&__content {
-		grid-area: content;
-		overflow-y: auto;
-	}
-}
-
-
 
