--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,13 @@
 // Colors
 
-$theme-bg-darken:#e5f0fa;
-$theme-bg-lighten:#f5faff;
+$theme-bg-darken: #e5f0fa;
+$theme-bg-lighten: #f5faff;
+
+$theme-primary: #3f90dc;
+$theme-primary-lighten: #28a7db;
+
+$theme-main-text: #4a5669;
+
+$input-border: #eaf0fa;
+
+$error: #ef1a55;
