--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 
 $theme-bg-darken: #e5f0fa;
 $theme-bg-lighten: #f5faff;
+$theme-back: #353F4F;
 
 $theme-primary: #3f90dc;
 $theme-primary-lighten: #28a7db;
