--- a/src/styles/components/app.scss
+++ b/src/styles/components/app.scss
@@ -1,6 +1,8 @@
 .app {
 	height: 100%;
 	min-height: 100%;
+	max-width: 1600px;
+	margin: 0 auto;
 	background: linear-gradient(180deg, $theme-bg-darken, $theme-bg-lighten);
 }
 
