--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,9 +6,11 @@ $theme-back: #353F4F;
 
 $theme-primary: #3f90dc;
 $theme-primary-lighten: #28a7db;
+$theme-link-active: #2481D7;
 
 $theme-main-text: #4a5669;
 
 $input-border: #eaf0fa;
 
 $error: #ef1a55;
+$success: #99E19D;
