--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,14 @@ h1 {
 	width: 100%;
 }
 
+.error {
+	color: $error
+}
+
+.success {
+	color: $success;
+}
+
 .panel-container {
 	background: #fff;
 	padding: 30px;
