--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,13 +5,6 @@
 @import "_normalize";
 @import "_grid";
 
-
-@import "components/navigation";
-@import "components/form";
-@import "components/button";
-@import "components/app";
-@import "components/messages";
-
 // @include font-face("Montserrat", "https://fonts.googleapis.com/css?family=Montserrat");
 
 body {
@@ -43,6 +36,12 @@ h1 {
 	line-height: 30px;
 	font-size: 24px;
 	font-weight: 400;
+}
+
+input, textarea {
+	font-size: 16px;
+	padding: 0 20px 0 10px;
+	outline: none;
 }
 
 .full-width {
